collage.css
/*
 * Globals
 */


/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
}

.btn {
  background-color: #F2A074;
  border:0px;
}

.btn:hover {
  background-color: #FBF6EE;
  color: #5a5a5a;
  border:0px;
}

/*
 * Base structure
 */

body {
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('Travel_2.jpeg');
  background-size: 100%;
  background-color: #cccccc;
}

/* .cover-container {
  max-width: 42em;
} */


/*
 * Header
 */

 .toolBar {
  width:100%;
  margin:0px;
  /* background-color: #5e5e5e; */
  background-color: white;
  height: 45px;
  padding-top: 20px;
  padding-left: 20px;
}
.menuItems {
 padding-left:40px;
 text-align:left;
}
.menuItem, .logoutText {
 padding: .25rem 0;
 padding-left: 10px;
 padding-right: 10px;
 font-weight: 700;
 color: rgba(255, 255, 255, .5);
 /* color: #fff; */
 color: #5e5e5e;
 background-color: transparent;
 border-bottom: .25rem solid transparent;
 margin:7px;
 text-align:left;
 text-shadow: none;
}

.menuItem:hover,
.menuItem:focus {
  /* color: white; */
  color: #5e5e5e;
  border-bottom-color: #5e5e5e;
  /* border-bottom-color: rgba(255, 255, 255, .25); */
}

.active {
 /* color: white; */
 color: #5e5e5e;
 border-bottom-color: #5e5e5e;
 /* border-bottom-color: white; */
}
.logoutText {
  color: white;
}

.logoutText:hover {
  color: #5a5a5a;
}

.logoutButton {
 width:80%;
 border-width:0px;
 background-color: #F2A074;
 border-radius: 5px;
 color: #fff;
}

.nameToolbar{
  color: #5e5e5e;
  text-shadow: none;
}

